--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6,6 +6,8 @@
   --fondo: #EFFBFD;
   --fuente: #00297b;
   --blanco: #FFFFFF;
+  --negro: #000000;
+  --gris: #9d9d9d;
 
   /* ***** Fuentes ***** */
   --fuente-principal: 'Mulish', sans-serif;
@@ -29,11 +31,187 @@ html {
   box-sizing: inherit;
 }
 
+h1,
+h2,
+h3,
+p {
+  margin: 0;
+  padding: 0;
+}
 
-@media (min-width: 375px) and (max-width: 412px) {
+
+@media (max-width: 375px) {
   body {
-    padding: 1.6rem;
     font-size: 1.6rem;
   }
   
+  /* * Vista 1 */
+  .main-1 {
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 2.4rem;
+  }
+
+  .contenedor-btn {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0 2.4rem;
+    width: 100%;
+    gap: 2rem;
+  }
+
+  .btn-principal {
+    padding: 1.4rem;
+    width: 100%;
+    background-color: var(--color-principal);
+    color: var(--blanco);
+    border: none;
+    font-size: 1.8rem;
+    border-radius: 5rem;
+  }
+
+  .carrusel {
+    width: 100%;
+    height: 84.5vh;
+    margin-bottom: 3.2rem;
+  }
+  /* * Fin Vista 1 */
+
+  /* * Vista 2 */
+  .main-2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 2.4rem 0;
+    gap: 8.2rem;
+  }
+
+  .contenedor-logo-principal {
+    width: 16rem;
+    height: 16rem;
+    background-image: url(../img/logo-provisional.png);
+    background-size: cover;
+  }
+
+  .contenedor-btn-secundario {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
+    padding: 2.4rem;
+    width: 100%;
+  }
+
+  .btn-contraste {
+    padding: 1.4rem;
+    width: 100%;
+    background-color: var(--color-acento);
+    color: var(--blanco);
+    border: none;
+    font-size: 1.8rem;
+    border-radius: 5rem;
+  }
+
+  .btn-google {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    padding: 1.4rem;
+    width: 100%;
+    font-size: 1.8rem;
+    border: .1rem solid;
+    background-color: var(--blanco);
+    border-radius: 5rem;
+  }
+
+  .btn-google img {
+    width: 2.4rem;
+  }
+  /* * Fin Vista 2 */
+
+  /* * Vista 3 */
+  .main-3 {
+    padding: 2.4rem;
+    display: flex;
+    flex-direction: column;
+    gap: 2.4rem;
+  }
+
+  .form-datos {
+    display: flex;
+    flex-direction: column;
+    gap: 2.4rem;
+  }
+
+  .form-datos input {
+    padding: 1.2rem;
+    border: .1rem solid var(--gris);
+    border-radius: .8rem;
+  }
+
+  .form-fecha {
+    display: flex;
+    flex-direction: column;
+    gap: 1.2rem;
+  }
+
+  .contenedor-fecha {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1.6rem;
+  }
+
+  .contenedor-fecha input {
+    padding: 1.2rem;
+    border: .1rem solid var(--gris);
+    border-radius: .8rem;
+    width: 30%;
+  }
+
+  .contenedor-seleccion-mascota {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .seleccion-mascota {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: .1rem solid var(--gris);
+    border-radius: .8rem;
+  }
+
+  .seleccion-perro {
+    width: 14rem;
+    height: 14rem;
+    background-image: url(../img/seleccion-perro.png);
+    background-size: cover;
+  }
+
+  .seleccion-gato {
+    width: 14rem;
+    height: 14rem;
+    background-image: url(../img/seleccion-gato.png);
+    background-size: cover;
+  }
+
+  .seleccion {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+    padding: .8rem;
+    border-top: .1rem solid var(--gris);
+  }
+
+  .contenedor-btn a {
+    text-decoration: none;
+    color: var(--color-principal);
+  }
+  /* * Fin Vista 3 */
 }
