--- a/src/css/style.css
+++ b/src/css/style.css
@@ -143,6 +143,7 @@ p {
   .form-datos {
     display: flex;
     flex-direction: column;
+    width: 100%;
     gap: 2.4rem;
   }
 
@@ -214,4 +215,21 @@ p {
     color: var(--color-principal);
   }
   /* * Fin Vista 3 */
+
+  /* * Vista 4 */
+  .main-4 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 2.4rem;
+    gap: 15rem;
+  }
+   
+  .form-datos input {
+    padding: 1.2rem;
+    border: .1rem solid var(--gris);
+    border-radius: .8rem;
+  }
+    /* * Fin Vista 4 */
 }
+
