--- a/src/css/style.css
+++ b/src/css/style.css
@@ -52,6 +52,67 @@ p {
     padding-bottom: 2.4rem;
   }
 
+  .contenedor-carrusel {
+    width: 100%;
+    height: 84.5vh;
+    margin-bottom: 3.2rem;
+  }
+
+  .contenedor-carrusel {
+    position: relative;
+    max-width: 100%;
+    max-height: 84.5vh;
+    min-width: 100%;
+    min-height: 84.5vh;
+    width: 100%;
+    height: 84.5vh;
+  }
+
+  .carrusel {
+    display: flex;
+    aspect-ratio: 16 / 9;
+    overflow-x: hidden;
+    scroll-snap-type: mandatory;
+    scroll-behavior: smooth;
+    max-width: 100%;
+    max-height: 100%;
+    min-width: 100%;
+    min-height: 100%;
+    width: 100%;
+    height: 100%;
+  }
+
+  .carrusel img {
+    flex: 1 0 100%;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    scroll-snap-align: start;
+  }
+
+  .nav-carrusel {
+    display: flex;
+    column-gap: 1rem;
+    position: absolute;
+    bottom: 1.25rem;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1;
+  }
+
+  .nav-carrusel a {
+    width: 1.2rem;
+    height: 1.2rem;
+    border-radius: 50%;
+    background-color: var(--blanco);
+    opacity: 0.1;
+    transition: opacity ease 250ms;
+  }
+
+  .nav-carrusel a {
+    opacity: 1;
+  }
+
   .contenedor-btn {
     display: flex;
     flex-direction: column;
@@ -70,12 +131,6 @@ p {
     border: none;
     font-size: 1.8rem;
     border-radius: 5rem;
-  }
-
-  .carrusel {
-    width: 100%;
-    height: 84.5vh;
-    margin-bottom: 3.2rem;
   }
   /* * Fin Vista 1 */
 
