--- a/src/css/style.css
+++ b/src/css/style.css
@@ -428,3 +428,37 @@ p {
   }
 }
 
+
+ /* * Vista 8*/
+ .header {
+  background-color: black;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 10px;
+  align-items: center;
+}
+.header img {
+  width: 25%;
+  height: auto;
+}
+.body-content {
+  padding: 20px;
+  flex-grow: 1; /* Esto permite que crezca y ocupe el espacio disponible */
+}
+.footer {
+  background-color: green;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+}
+.footer .circle-button {
+  width: 50px;
+  height: 50px;
+  background-color: blue;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
