--- a/src/css/style.css
+++ b/src/css/style.css
@@ -430,35 +430,179 @@ p {
 
 
  /* * Vista 8*/
- .header {
-  background-color: black;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+
+ #header {
+  background-color: #AFDEED;
+  border-bottom-left-radius: 30px;
+  border-bottom-right-radius: 30px;
   padding: 10px;
-  align-items: center;
-}
-.header img {
-  width: 25%;
-  height: auto;
-}
-.body-content {
-  padding: 20px;
-  flex-grow: 1; /* Esto permite que crezca y ocupe el espacio disponible */
-}
-.footer {
-  background-color: green;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px;
+  margin-bottom: 70; /* Ajusta este valor para subir o bajar el header */
 }
-.footer .circle-button {
+.header-logo {
+  float: left;
+}
+
+.header-profile {
+  float: left;
+  margin-left: 10px;
+  display: flex;
+  align-items: center;
+}
+
+.profile-image-container {
   width: 50px;
   height: 50px;
-  background-color: blue;
   border-radius: 50%;
+  overflow: hidden;
+}
+
+.profile-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.welcome-message {
+  margin-left: 10px;
+}
+
+.logout-button {
+  float: right;
+  background-color: transparent;
+  border: none;
+  color: #000; /* Change color as needed */
+  font-size: 16px;
+}
+
+.logout-button:hover {
+  text-decoration: underline;
+}
+
+.post-container {
+  position: relative;
+  width: 310px;
+  height: 200px;
+  margin: 200px auto 0; /* Ajusta este valor para subir o bajar el contenido */
+  border-radius: 10px;
+  background-color: #FFFFFF;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}
+.profile-container {
+  position: absolute;
+  top: -15px;
+  left: -15px;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: #FFFFFF;
+  box-shadow: 0px 4px 6px rgba(0,0,0,0.1);
+}
+
+.profile-image {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+
+.actions {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
+.action-button {
+  background-color: #FFFFFF;
+  border: none;
+  cursor: pointer;
+}
+
+.action-icon {
+  width: 20px;
+  height: 20px;
+}
+
+.like-button {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+}
+
+.post-content {
+  padding: 10px;
+}
+
+.username {
+  font-weight: bold;
+  color: #00297B;
+}
+
+.timestamp {
+  font-size: 12px;
+  color: #333;
+  margin: 5px 0;
+}
+
+.post-text {
+  color: #00297B;
+  text-align: center;
+}
+
+
+#footer {
+  background-color: #BAD265;
+  padding: 20px;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
+}
+
+.footer-button {
+  background-color: transparent;
+  border: none;
+  color: white;
+  font-size: 16px;
+}
+
+.footer-button:hover {
+  text-decoration: underline;
+}
+
+.footer-profile {
+  display: flex;
+  align-items: center; /* Centra los elementos verticalmente */
+}
+
+.profile-image-container {
+  display: flex; /* Use flexbox to center items */
+  align-items: center;
+  margin-right: 10px;
+}
+
+.profile-button {
+  background-color: transparent;
+  border: none;
+  color: white;
+  font-size: 16px;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+
+.profile-button img {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+}
+
+.notification-dot {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  background-color: #BAD265;
+  border-radius: 50%;
+  bottom: -10px;
+  right: calc(50% - 10px);
 }
