--- a/src/css/style.css
+++ b/src/css/style.css
@@ -637,4 +637,44 @@ p {
   justify-content: center; /* Centramos horizontalmente */
    /* Ajustamos la posición desde abajo */
 }
+.posting-area{
+  display: flex;
+  justify-items: center;
+  align-items: center;
+}
+.dialog-posting i{
+  align-self: center;
+  left: 45%;
+  top: 5%;
+  width: 3.2rem;
+  height: 3.2rem;
+  background-color: #AFDEED;
+  border-radius: 100%;
+  text-align: center;
+  line-height: 3.2rem;
+  position: relative;
+  color:#00297b;
+  font-size: x-large;
+}
+.dialog-posting {
+  position:absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width:100%;
+  border-radius: 1.2rem;
+  border: none;
+  top: 42rem;
+}
+.posting-area {
+  width: 100%;
 
+}
+.posting-area textarea{
+  width: 32rem;
+  resize: none;
+}
+.posting-area textarea:hover{
+  background-color: #eeeeee;
+}
