--- a/src/css/style.css
+++ b/src/css/style.css
@@ -466,7 +466,7 @@ p {
   /* float: left; */
   display: flex;
   align-items: center;
-  gap: 2.4rem;
+  gap: .8rem;
 }
 
 .profile-image {
@@ -494,7 +494,6 @@ p {
 .post-container {
   position: relative;
   width: 310px;
-  height: 200px;
   margin: 10px auto 60px; /* Ajusta este margen inferior según sea necesario */
   border-radius: 10px;
   background-color: #FFFFFF;
@@ -541,14 +540,15 @@ p {
   position: absolute;
   bottom: 10px;
   right: 10px;
- 
 }
+
 .like-button .fa-paw {
   color: #EC7B67; /* Cambia el color del icono de la pata según tu preferencia */
-  margin-right: 5px; /* Ajusta el margen derecho según tu diseño */
+  font-size: 2.4rem;
 }
+
 .post-content {
-  padding: 20px;
+  padding: 1.8rem;
 }
 
 .username {
@@ -564,7 +564,6 @@ p {
 
 .post-text {
   color: #00297B;
-  text-align: center;
 }
 
 .footer-button:active {
@@ -677,4 +676,20 @@ p {
 }
 .posting-area textarea:hover{
   background-color: #eeeeee;
+}
+
+/* main- 9 */
+.main-9 {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-image: linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.8)), url(../img/logo-paw.png);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.titulo-posts {
+  text-align: center;
+  color: var(--fuente);
 }
