--- a/src/css/style.css
+++ b/src/css/style.css
@@ -668,7 +668,10 @@ p {
 
 .posting-area {
   width: 100%;
-
+  flex-direction: column;
+  overflow-y: auto;
+  max-height: 70vh;
+  padding:5rem;
 }
 .posting-area textarea{
   width: 32rem;
