--- a/src/css/style.css
+++ b/src/css/style.css
@@ -663,15 +663,15 @@ p {
   width:100%;
   border-radius: 1.2rem;
   border: none;
-  top: 42rem;
+  top: 45.4rem;
 }
 
 .posting-area {
   width: 100%;
   flex-direction: column;
   overflow-y: auto;
-  max-height: 70vh;
-  padding:5rem;
+  padding-top: 2rem;
+  margin:0;
 }
 .posting-area textarea{
   width: 32rem;
